nunaliit2-js: Fix issue where zoom buttons are drawn behind the previous/next area buttons.
Issue #340

--- a/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.displayBox.css
+++ b/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.displayBox.css
@@ -52,8 +52,8 @@
 }
 
 .n2DisplayBoxImageZoomPlus {
-    top: 10px;
-    left: 10px;
+    top: 20px;
+    left: 20px;
 	background-position: 0px 0px;
 }
 
@@ -62,8 +62,8 @@
 }
 
 .n2DisplayBoxImageZoomMinus {
-    top: 40px;
-    left: 10px;
+    top: 50px;
+    left: 20px;
 	background-position: 0px -25px;
 }
 
